--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.xiaomiwujiecao.uniappmacrosupport</id>
-    <name>uniapp-macro-support Template</name>
+    <name>uniapp-macro-support</name>
     <vendor>xiaomiwujiecao</vendor>
 
     <depends>com.intellij.modules.platform</depends>
