--- a/gradle.properties
+++ b/gradle.properties
@@ -13,10 +13,10 @@ pluginUntilBuild = 232.*
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IU
 platformVersion = 2023.1.3
-
+platformDownloadSources=true
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = JavaScript,com.intellij.css,less,sass
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.1
